--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -2734,3 +2734,15 @@ margin-left: 1.5rem;
 .token-sale-section div:nth-child(1){
   text-align: right;
 }
+.choose_icon{
+  width: 100px;
+  margin-top: 1rem;
+  margin-bottom: 00.5em;
+}
+.apply_img{
+  width: 400px;
+}
+.apply_flex{
+  display: flex;
+  justify-content: end;
+}
