--- a/src/assets/css/Style.css
+++ b/src/assets/css/Style.css
@@ -89,6 +89,119 @@ button:disabled:hover {
   padding: 0 2rem !important;
 } */
 
+/* MOBILE HEADER */
+
+.mobile-header{
+  display: none;
+}
+
+.sidenav .closebtn {
+  padding: 15px 30px !important;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  justify-content: flex-start;
+  background-color: var(--light-bg);
+  padding-top: 80px;
+}
+
+.sidenav .menu-list {
+  padding: 0;
+}
+
+.sidenav .menu-list li {
+  padding: 0.7rem 8px 0.7rem 3rem;
+}
+
+.sidenav .menu-list a {
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--text-black);
+  display: inline;
+  transition: 0.3s;
+  position: relative;
+}
+
+.sidenav .menu-list .menu-dropdown {
+  display: none;
+}
+
+.sidenav .menu-list .menu-dropdown a {
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.sidenav .menu-list .menu-dropdown li {
+  padding: 0.7rem 8px 0.7rem 1rem;
+}
+
+.sidenav .menu-list a:after {
+  position: absolute;
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: var(--primary);
+  left: 0;
+  bottom: -5px;
+  transition: all 0.3s ease-in;
+}
+
+.sidenav .menu-list a :hover {
+  transform: translateX(10px);
+}
+.sidenav .menu-list a:hover:not(.menu-dropdown a)::after {
+  width: 100%;
+}
+
+.sidenav .menu-list .menu-dropdown a:hover {
+  font-weight: 800;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  padding-top: 15px;
+  font-size: 36px;
+  right: 0;
+  text-decoration: none;
+  color: var(--text-black);
+}
+
+.open-btn {
+  padding: 15px 30px;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: var(--text-white);
+  box-shadow: var(--shadow);
+}
+
+.open-btn span {
+  color: var(--text-black);
+  display: inline-block;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+/* MOBILE HEADER */
+
+
 .sticky-nav {
   box-shadow: 0px 0px 18px 2px rgb(112 110 110 / 41%);
   position: sticky;
@@ -429,7 +542,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .footer-icon a {
-  margin-left: 0.75em;
+  margin-right: 0.75em;
   align-items: center;
   color: var(--text-white);
   font-size: 20px;
@@ -2543,8 +2656,8 @@ margin-left: 1.5rem;
   line-height: 50px;
 }
 .down-section img{
-  width: 400px;
-  height: 600px;
+  width: 240px;
+
 }
 .box-header-purple{
   background-color: var(--light-bg);
